--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     <body>
         Bem-vindo ao CaronUSP. 
         <br>Insira seu e-mail e sua senha para ter acesso ao site.
-        <form name="Login" action="login.js" 
+        <form name="Login" action="index.html" 
               onsubmit="return validateForm()">
             <table>
                 <tr>
@@ -21,5 +21,6 @@
             </table>
             <input type="submit" name="entrar" value="Entrar" />  
         </form>
+        <script src="login.js"></script>
     </body>
 </html>
