--- a/login.html
+++ b/login.html
@@ -22,5 +22,6 @@
             <input type="submit" name="entrar" value="Entrar" />  
         </form>
         <script src="login.js"></script>
+        <p id="alerta"></p>
     </body>
 </html>
